[gd_scene load_steps=6 format=3 uid="uid://g55e88eesyxv"]

[ext_resource type="Script" path="res://Scripts/tower.gd" id="1_6gwu4"]
[ext_resource type="PackedScene" uid="uid://b17np5pffnu44" path="res://Scenes/bullet.tscn" id="2_o42v1"]
[ext_resource type="Texture2D" uid="uid://b27ljaqn03hqy" path="res://Sprites/zepclose.png" id="3_llu3k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rit2p"]
size = Vector2(128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_06p8l"]
radius = 481.017

[node name="Tower" type="StaticBody2D"]
collision_layer = 0
script = ExtResource("1_6gwu4")
bulletScene = ExtResource("2_o42v1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -29)
scale = Vector2(0.675, 0.707143)
texture = ExtResource("3_llu3k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rit2p")

[node name="TowerShootTimer" type="Timer" parent="."]
wait_time = 3.945

[node name="ShootRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootRadius"]
shape = SubResource("CircleShape2D_06p8l")

[node name="Upgrade" type="TextureButton" parent="."]
offset_left = -63.0
offset_top = -63.0
offset_right = 64.0
offset_bottom = 64.0

[connection signal="timeout" from="TowerShootTimer" to="." method="_on_tower_shoot_timer_timeout"]
[connection signal="area_entered" from="ShootRadius" to="." method="_on_shoot_radius_area_entered"]
[connection signal="area_exited" from="ShootRadius" to="." method="_on_shoot_radius_area_exited"]
[connection signal="pressed" from="Upgrade" to="." method="_on_upgrade_pressed"]
